<!--Created by Adrian Carideo, Joe Clements, Kendall Conley
Copyright © 2019 DanceBlue. All rights reserved. -->
<resources>
    <string name="app_name">Dance Blue</string>
    <string name="events">Events</string>
    <string name="home">Home</string>
    <string name="blog">Blog</string>
    <string name="more">More</string>
    <string name="more_fragment">MORE FRAGMENT</string>
    <string name="events_fragment">EVENTS FRAGMENT</string>
    <string name="blog_fragment">BLOG FRAGMENT</string>
    <string name="rave_nyi">Rave NYI</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="home_fragment">HOME FRAGMENT</string>
    <string name="rave_button">rave_button</string>
    <string name="qr_button">QR Button</string>
    <string name="db_layout">DB Layout</string>
    <string name="sponsorTitle">SPONSORS</string>
    <string name="layoutTitle">LAYOUT</string>
    <string name="announceTitle">ANNOUNCEMENTS</string>
    <string name="donate">DONATE</string>
    <string name="contact">CONTACT</string>
    <string name="faq">FAQs</string>
    <string name="this_week">THIS WEEK</string>
    <string name="coming_up">COMING UP</string>
    <string name="featured">FEATURED</string>
    <string name="recent">RECENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_title">DESCRIPTION</string>
    <string name="directions_title">DIRECTIONS</string>
    <string name="invalidBlogMsg">Invalid Blog Entry. Sorry!</string>
</resources>
