<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_qr_temp_24dp"
        android:gravity="start"
        android:id="@+id/qr_button"
        android:contentDescription="@string/qr_button" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/home"
        android:textSize="18sp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_rave_temp_24dp"
        android:gravity="end"
        android:id="@+id/rave_button"
        android:contentDescription="@string/rave_button" />

</androidx.appcompat.widget.Toolbar>