<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/outer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tempTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text = "@string/home_fragment"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeTable"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/DB_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempTitle"
        android:layout_below="@+id/tempTitle"
        app:layout_constraintVertical_bias="0.100000024">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/countdownTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/dayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/hourText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/minText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/secText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/dayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/days" />

            <TextView
                android:id="@+id/hourLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hours" />

            <TextView
                android:id="@+id/minLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/minutes" />

            <TextView
                android:id="@+id/secLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/seconds" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/layout_title"
        android:text="@string/layoutTitle"
        android:layout_below="@+id/timeTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTable"
        app:layout_constraintBottom_toTopOf="@id/DB_layout" />

    <ImageButton
        android:id="@+id/DB_layout"
        android:layout_width="410dp"
        android:layout_height="326dp"
        android:contentDescription="@string/db_layout"
        android:scaleType="fitXY"
        android:src="@drawable/db_floormap"
        app:layout_constraintBottom_toTopOf="@id/sponsor_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/sponsor_title"
        android:text="@string/sponsorTitle"
        android:layout_below="@+id/DB_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DB_layout"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>